_sass/footer.scss
/*
 *   Copyright (c) 2022 Nazmul Idris
 *   All rights reserved.
 *
 *   Licensed under the Apache License, Version 2.0 (the "License");
 *   you may not use this file except in compliance with the License.
 *   You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 *   Unless required by applicable law or agreed to in writing, software
 *   distributed under the License is distributed on an "AS IS" BASIS,
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *   See the License for the specific language governing permissions and
 *   limitations under the License.
 */

.footer-container {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  height: 2em;
  display: flex;
  justify-content: space-between;
  background: $globalLinearGradient3;
  align-items: center;
}

.footer-elem-1 {
  margin-left: 1ch;
  // font-family: $specialHeadingFontFamily, $codeFontFamily;
}

.footer-elem-2 {
  margin-right: 1ch;
  color: $colorNeonPurple;
  // font-family: $specialHeadingFontFamily, $codeFontFamily;
}

